--- a/membership.html
+++ b/membership.html
@@ -183,53 +183,30 @@
                         <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-				<!--
-				<div class="data" id="html5-ch1-7leftcol">
-                    <h3>Cottages, converted barns, caravans</h3>
-                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-                    <br>The superb interior of one of our cottages
-                </div>
 				
-
-                <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
-                    <ul><!--start of menu list--
-                        <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                        <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                        <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                        <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                    </ul><!--end of menu list--
-                </nav>
-                    <!--</div> removed and replaced with </nav>--
-                <div class="data" id="html5-ch1-7midcol">
-                    <h3>Situated in the BDA's beautiful countryside</h3>
-                    <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-                </div>
-                -->
                 <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                     <div class="çol-12">
-                        <img src="img/paper.png" ;>
+                        <img src="img/paper.png"><br>
+						<p id="intro">
+                            We are!</strong> the planet's premier celebrity tracking and monitoring service.
+                            Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
+                            You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
+                        </p>
                     </div><!-- end-col-12 -->
                 </div> <!-- end class row -->
+                            
+                <div class="row" style="background-color: #F6931E;">
+                    <div class="col-11">
+                        <h2>Get ready for take off.</h2><br>
+                        <div class="data" id="navigation">
 
-                            <!--</div> removed and replaced with </nav>--
-                            <div class="data" id="html5-ch1-7midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-                            </div> -->
-
-      <div class="row" style="background-color: #F6931E;">
-        <div class="col-11">
-          <h2>Get ready for take off.</h2><br>
-          <div class="data" id="navigation">
-
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Buy Now!</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Gift Ideas</a></li>
-            </ul>
-          </div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Buy Now!</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Gift Ideas</a></li>
+                            </ul>
+                        </div>
 
           <p id="intro">
             <!-- Welcome to <strong>StarTrackr!</strong> --> The planet's premier celebrity tracking and monitoring service.
