--- a/membership.html
+++ b/membership.html
@@ -322,22 +322,8 @@
 
                 <div class="row" style="background-color: #34495e;">
                     <div class="col-8">
-                        <h2>Fine Print In just 42 hours and 27 minutes</h2>
+                        <h2>In just 42 hours and 27 minutes</h2>
 
-                        <p id="fine_print">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                            mollit anim id est laborum.
-                        </p>
-
-                        <div id="comment">
-                            <h2>Leave a comment</h2>
-                            name:<br>
-                            <input type="text"><br>
-                            comment:<br>
-                            <textarea rows="5" cols="30" name="comment"></textarea>
                         </div>
                     </div><!-- end col-8 -->
                     <div class="col-3">
