--- a/membership.html
+++ b/membership.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 	   
         <link rel="stylesheet" href="./nav[1].css">
+		<link rel="stylesheet" href="./navigation.css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
