--- a/membership.html
+++ b/membership.html
@@ -333,7 +333,7 @@
                     <div class="col-3">
                         <img id="paper-blue" class="circle" src="images/paper-blue.png">
                     </div><!-- end col-3 -->
-                </div><!-- en.row -->
+                </div><!-- end-.row -->
 
                 <div class="row" style="background-color: #00afe1;">
                     <div class="col-7">
