--- a/membership.html
+++ b/membership.html
@@ -22,6 +22,14 @@
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
+        <!-- panel-spillter -->
+		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8" />
+  
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="script.js"></script>
 		
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
