--- a/membership.html
+++ b/membership.html
@@ -241,6 +241,31 @@
                    </div> <!-- end col-3 -->
 				</div> <!-- end class row -->
 
+				<div id="splitter">
+                    <h2>Terms &amp; Conditions</h2>
+                    <div class="pane" id="tocPane">
+                        <div class="inner">
+                            <ol>
+                                <li><a href="#privacy">Your Privacy</a></li>
+                                <li><a href="#celebs">Celeb's Privacy</a></li>
+                                <li>Ownership & Intellectual Property
+                                    <ol style="list-style-type: lower-roman">
+                                        <li><a href="#liability">Liability</a></li>
+                                        <li><a href="#rights">Exclusive & Non-exclusive rights</a></li>
+                                        <li><a href="#ugc">User Generated Material</a></li>
+                                    </ol>
+                                </li>
+                            </ol>
+                        </div>   
+                    </div>
+                    <div class="pane" id="contentPane">
+                        <div class="inner">
+                            <h3>User Generated Material</h3>
+                            <p>This website contains messaging systems and other user generated content toward the purpose and fulfillment of directory or indirectly contacting or stalking celebrities and/or their family and/or people in their vaguely related social sphere. Such content is here forth and eternally regarded as property of StarTrackr and parent company et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row" style="background-color: #1abc9c;">
                     <div class="col-10">
                         <h2>We're flying around the globe</h2>
@@ -398,6 +423,7 @@
                 </div>
             </div>    
             <!-- Vendor JS Files -->
+			
             <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="../orris0/aos.css"></script>
     
