--- a/membership.html
+++ b/membership.html
@@ -26,6 +26,8 @@
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8" />
+		 <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="./css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
   
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
