--- a/membership.html
+++ b/membership.html
@@ -28,6 +28,11 @@
         <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8" />
 		 <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<link rel="stylesheet" href="./css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+	
+  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
   
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
