--- a/membership.html
+++ b/membership.html
@@ -179,7 +179,7 @@
 			
             <div class="data" id="html5-ch1-7content">
 				
-                <h2>Practical HTML5 Projects for fun and Profit!</h2>
+                <h2 id="html5-ch1-7h2>Practical HTML5 Projects for fun and Profit!</h2>
             
                 <div class="row">
                     <div class="col-12">
