--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
                 
                 <div class="col-12">
-				    <h2id="html5-ch1-7h1"><Practical HTML5 Projects for fun and Profit!</h2> 
+				    <h1><Practical HTML5 Projects for fun and Profit!</h1> 
                 </div><!-- end-col-12 -->
 				
             </header>
@@ -353,7 +353,7 @@
                 </div>
             </div>               
         </div><!-- end wrapper -->
-  </body> end body -->  
+  </body> <!--end body -->  
 
 		
 	    <div class="wrapper">
