--- a/events.html
+++ b/events.html
@@ -256,16 +256,16 @@
 
 <div class="col-11">
 <h2>In just 42 hours and 27 minutes.</h2>
-
+<!--
 <div class="col-3">
     <img class="circle" src="img/plane.png" width="95%" ;>
-</div> <!-- end col-3 -->
+</div> <!-- end col-3 --
 
-</div><!-- end class col-11 -->
+</div><!-- end class col-11 --
 
 </div> <!-- end class row --><!-- end class row -->
 
-<!-- Vendor JS Files -->
+<!-- Vendor JS Files --
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="../orris0/aos.css"></script>
 
@@ -275,9 +275,9 @@
 <script src="../orris0/isotope.pkgd.min.js"></script>
 <script src="../orris0/swiper-bundle.min.js"></script>
 <script src="../orris0/validate.js"></script>
-<!--jQuery JS-->
+<!--jQuery JS--
 <script src="../orris0/js/"></script>
-<!-- Template Main JS File -->
+<!-- Template Main JS File --
 <script src="../orris0/main.js"></script>
 
 <div class="row" style="background-color: #00afe1;">
@@ -315,7 +315,7 @@
                                 </div>
                                 <hr class="full">
                             </div> <!-- end col-12 -->
-                        </div> <!-- end class footer-inner -->
+                        </div> <!-- end class footer-inner --
                             <div class="row" style="background-color: #66d4ff;">
                                 <div class="col-12">
                                     <h2>Follow Us</h2>
@@ -357,7 +357,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                </div> <!-- end col-3 -->
+                                </div> <!-- end col-3 --
                                 <div id="container">
                                     <p>&nbsp;</p>
                                     <p>Tour Orris (default)</p>
@@ -470,8 +470,8 @@
                                         <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
                                         <li><a href="#"><i class="instagram"></i></i></a></li>
                                     </ul>
-                                </div> <!-- end col-3 -->
-                            </div> <!-- end class row -->
+                                </div> <!-- end col-3 --
+                            </div> <!-- end class row --
                             <a href="https://orris0.github.io/orris0/index.html"
                                 class="back-to-top d-flex align-items-center justify-content-center"><i
                                     class="bi bi-arrow-up-short"></i></a>
