--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </head>
     <body>
         <div class="wrapper">
+			<br class="clear">
 			<img class="logo" src="img/flexy-logo.png">
 			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
                 
