--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="wrapper">
 			<br class="clear">
 			<img class="logo" src="img/flexy-logo.png">
-			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-                
+			<br class="clear">
+			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
                 <div class="col-12">
 				    <h1 id="html5-ch1-7h1">StarTrackr!</h1>
                 </div><!-- end-col-12 -->
