--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
                 <div class="col-12">
 				    <h1 id="html5-ch1-7h1">StarTrackr!</h1>
                 </div><!-- end-col-12 -->
-				
             </header>
-			
+			<br class="clear">
 		    <div class="data" id="html5-ch1-7content">
                 <h2>Practical HTML5 Projects for fun and Profit!</h2>
             
