--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
                 <div class="col-12">
 				    <h1 id="html5-ch1-7h1">StarTrackr!</h1>
                 </div><!-- end-col-12 -->
+				<br class="clear">
             </header>
 			<br class="clear">
 		    <div class="data" id="html5-ch1-7content">
+				<br class="clear">
                 <h2>Practical HTML5 Projects for fun and Profit!</h2>
             
                 <div class="row">
