--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         &copy; Copyright 2010 CelebriTracker Productions
       </p>
     </div>
-  </div>
+  </div><!-- end-container -->
                     </div>
                 </div><!-- end-.row -->
 		              
