--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 		    <div class="data" id="html5-ch1-7content">
 				<br class="clear">
                 <h2>Practical HTML5 Projects for fun and Profit!</h2>
+				<br class="clear">
             
                 <div class="row">
                     <div class="col-12">
@@ -114,9 +115,11 @@
                         </nav>
                     </div><!-- col-12 -->
                 </div><!-- end-.row -->
+				<br class="clear">
 
                 <div class="row">
                     <div class="çol-12">
+						<br class="clear">
                         <img src="img/kite.png">
 					    <br class="clear">
 						<div id="container">
