--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
                             </nav>
                         </div><!-- col-12 -->
                     </div><!-- end-.row -->
+					<div id="navigation">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Buy Now!</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Gift Ideas</a></li>
+                        </ul>
+                    </div>
 				
                     <div class="row">
                         <div class="çol-12">
@@ -139,8 +147,8 @@
                                </div>
                                
 								<p id="intro">
-        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-      </p>
+                                    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
+                                </p>
       <p id="no-script">
         We recommend that you have JavaScript enabled!
       </p>
