--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                             </nav>
                         </div><!-- col-12 -->
                     </div><!-- end-.row -->
+					<br class="clear">
 					<div id="navigation">
                         <ul>
                             <li><a href="#">Home</a></li>
