--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 </ul>
                             </nav>
                         </div><!-- col-12 -->
-                    </div><!-- end-.row -->
+                    </div><!-- end-.row --
 					<br class="clear">
 					<div id="navigation">
                         <ul>
@@ -122,7 +122,7 @@
                             <li><a href="#">Gift Ideas</a></li>
                         </ul>
                     </div>
-				
+				-->
                     <div class="row">
                         <div class="çol-12">
                             <img src="img/kite.png">
