--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 </div>
             </div>               
 
-	    <div class="wrapper">
+	    <!-- <div class="wrapper"> -->
 			
 			<img class="logo" src="img/flexy-logo.png">
 			
