--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</ul>
                     </div>
 					
-                               
+                          <!--     
 								<p id="intro">
                                     Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
                                 </p>
@@ -227,7 +227,7 @@
         &copy; Copyright 2010 CelebriTracker Productions
       </p>
     </div>
-	-->
+	--
   
                     </div>
                 </div><!-- end-.row -->
@@ -382,7 +382,7 @@
                     </div><!-- end col-8 -->
                     <div class="col-3">
                         <img id="paper-blue" class="circle" src="images/paper-blue.png">
-                    </div><!-- end col-3 -->
+                    </div><!-- end col-3 --
                 </div><!-- en.row -->
 
                 <div class="row" style="background-color: #00afe1;">
