--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 
             <div class="row">
                 <div class="çol-12">
-                    <img src="img/kite.png" ;>
+                    <img src="img/kite.png">
                 </div>
             </div><!-- end-.row -->
             
