--- a/index.html
+++ b/index.html
@@ -745,7 +745,8 @@
                 <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
                     <p>&copy; Kite-It.</p>
                 </div>
-            </div>               
+            </div> 
+		</div><!-- end-container -->
     </div><!-- end wrapper -->
 </body><!-- end body  -->   
 </html>
