--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         <img id="waves" class="circle" src="images/waves.png">
                     </div><!-- end col-3 -->
                 </div>
-            </div><!-- end-container -->
+            </div><!-- end content -->
                 <div class="row" style="background-color: #e5ef3f;">
                     <div class="col-9">
                         <h2>Above the clouds &amp; over the sea.</h2>
