--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                         </div><!-- col-12 -->
                     </div><!-- end-.row -->
                     <div class="row">
-						
                          <div class="çol-12">
                             <img src="img/kite.png">
 					     </div>
+					</div>
 						
 					<div id="navigation">
                         <ul>
