--- a/index.html
+++ b/index.html
@@ -235,7 +235,11 @@
 		              
 		        <div class="row">
                     <div class="çol-12" padding="2%">
-                        <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
+                       <!-- <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2> -->
+						 <div id="banner-wrapper">
+                            <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br> 
+						    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>
+                        </div>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				
