--- a/index.html
+++ b/index.html
@@ -249,12 +249,15 @@
                 <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                     <div class="çol-12">
                         <img src="img/paper.png">
+						<p id="no-script">
+                            We recommend that you have JavaScript enabled!
+                        </p>
 						
-						<p id="intro">
+						<!-- <p id="intro">
                             We are!</strong> the planet's premier celebrity tracking and monitoring service.
                             Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
                             You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-                        </p>
+                        </p> -->
                     </div><!-- end-col-12 -->
                 </div> <!-- end class row -->
                             
