--- a/index.html
+++ b/index.html
@@ -235,13 +235,8 @@
 		              
 		        <div class="row">
                     <div class="çol-12" padding="2%">
-                    <!-- <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2> -->
 						<div id="banner-wrapper">
-                            <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>
-							<p id="intro">
-                                Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place.
-								We have a very special special on B-grade celebs this week, so hurry in!
-                            </p>	
+                            <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>	
                         </div>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
@@ -249,11 +244,9 @@
                 <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                     <div class="çol-12">
                         <img src="img/paper.png">
-						<!-- <p id="intro">
-                            We are!</strong> the planet's premier celebrity tracking and monitoring service.
-                            Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
-                            You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-                        </p> -->
+						<p id="no-script">
+                            We recommend that you have JavaScript enabled!
+                        </p>
                     </div><!-- end-col-12 -->
                 </div> <!-- end class row -->
                             
