--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
                         <h2>Get ready for take off.</h2>
-						<br>
+					</div>
                         <div class="data" id="navigation">
 
                             <ul>
