--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
                                 <li><a href="#">Gift Ideas</a></li>
                             </ul>
                         </div>
+
+						<p id="intro">
+                                    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
+                                </p>
                     </div><!-- end col-11 -->
                 </div> <!-- end class row -->
 
