--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
                 <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
                         <h2>Get ready for take off.</h2>
+						<p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
+                        </p>
 					
                         <div class="data" id="navigation">
 
@@ -279,10 +282,6 @@
                     
 					<div class="col-3">
                         <img class="circle" src="img/orange-globe.png">
-                        <p id="disclaimer">
-                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like
-                            people so their privacy should be respected.
-                        </p>
                    </div> <!-- end col-3 -->
 				</div> <!-- end class row -->
 
