--- a/index.html
+++ b/index.html
@@ -275,9 +275,14 @@
 
                 <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
-			
-                        
-			
+			            <div id="news">
+                            <h2>Latest News</h2>
+                            <p>
+                                Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the chef's own hands?
+                                <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+                            </p>
+                            <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+                       </div>
                     </div><!-- end col-11 -->
                     
 					<div class="col-3">
