--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     </p>
                 </div>
             </div>    
-            <!-- Vendor JS Files -->
+            <!-- Vendor JS Files --
             <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="../orris0/aos.css"></script>
     
@@ -340,9 +340,9 @@
             <script src="../orris0/isotope.pkgd.min.js"></script>
             <script src="../orris0/swiper-bundle.min.js"></script>
             <script src="../orris0/validate.js"></script>
-                <!--jQuery JS-->
+                <!--jQuery JS--
             <script src="../orris0/js/"></script>
-                <!-- Template Main JS File -->
+                <!-- Template Main JS File --
             <script src="../orris0/main.js"></script>
             
 			<a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
