--- a/index.html
+++ b/index.html
@@ -383,8 +383,7 @@
                 <div class="col-12" style="padding: 2%;">
                     <div id="banner">
                         <div id="banner-wrapper">
-                            <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br> 
-						    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>
+                            <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!</h2>
                         </div>
                     </div>
                 </div><!-- end col-12 -->
