--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                 </div><!-- end content -->
                 <div class="row" style="background-color: #e5ef3f;">
                     <div class="col-9">
-                        <h2>Above the clouds &amp; over the sea.</h2>
+                       <!-- <h2>Above the clouds &amp; over the sea.</h2> -->
                         <div>
-                            <h2 class="heading">Our Celebrities</h2>
+                            <h2 class="heading">Our Celebrities Above the clouds &amp; over the sea.</h2>
                             <p class="info">
                                 We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
                                 the little critters to realise they've been tagged - so you have to be fast!
