--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
   
-        <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> --
+        <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> -->
         <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css">
         <!-- Font Awesome Icons -->
         <link rel="icon" href="./favicon.ico" sizes="any">
