--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app lang="en"> 
     <head>
         <!--Everything you write should be using markups -->
