--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 			
 			    <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
                     <div class="col-12">
-				        <h1 id="html5-ch1-7h1">StarTrackr!</h1>
+				        <h1 id="html5-ch1-7h1">Tourorris's Rural Retreats!</h1>
                     </div><!-- end-col-12 -->	
                 </header>
 			
@@ -135,7 +135,7 @@
 		            <div class="row">
                         <div class="çol-12" padding="2%">
 						    <div id="banner-wrapper">
-                                <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>	
+                                <h2 class="dark" id="html5-ch1-7h2">Award winning accommodation, self catering or bed and breakfast</h2>
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
