--- a/news.html
+++ b/news.html
@@ -67,44 +67,37 @@
     <meta property="og:image" content="https://example.com/ogp.jpg">
     <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg">
     <meta property="og:image:type" content="image/jpeg">
-        <meta property="og:image:width" content="400">
-        <meta property="og:image:height" content="300">
-        <meta property="og:image:alt" content="A shiny red apple with a bite taken out">
-        <meta property="og:image" content="https://example.com/rock.jpg">
-        <meta property="og:image:width" content="300">
-        <meta property="og:image:height" content="300">
-        <meta property="og:image" content="https://example.com/rock2.jpg">
-        <meta property="og:image" content="https://example.com/rock3.jpg">
-        <meta property="og:image:height" content="1000">
-        <!-- Favicon-->
-        <!--<link rel="icon" href="images/favicon.ico">-->
-
-        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-        <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
-
-        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-        <link rel="author" href="mailto:internetearnings@live.com">
-        <link rel="author" type="text/html" href="https://orrisb.github.io">
-        <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-        <!-- SimpleLightbox plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-        <style>
-            p {
-                color: red;
-            }
-        </style>     
-        <!--
-        <link href="./vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-        Theme CSS - Includes Bootstrap 
-        <link href="./CSS/creative.min.css" rel="stylesheet">-->
-        <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-        <!--  -->
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="300">
+    <meta property="og:image:alt" content="A shiny red apple with a bite taken out">
+    <meta property="og:image" content="https://example.com/rock.jpg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:image" content="https://example.com/rock2.jpg">
+    <meta property="og:image" content="https://example.com/rock3.jpg">
+    <meta property="og:image:height" content="1000">
+    <!-- Favicon-->
+    <!--<link rel="icon" href="images/favicon.ico">-->
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+    <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
+    <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+    <link rel="author" href="mailto:internetearnings@live.com">
+    <link rel="author" type="text/html" href="https://orrisb.github.io">
+    <!-- Bootstrap Icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <!-- SimpleLightbox plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+    <style>
+        p {
+            color: red;
+        }
+    </style>     
+    
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
 
@@ -151,7 +144,16 @@
 
                 <div class="row">
                     <div class="çol-12">
-                      <img src="img/kite.png" ;>
+                        <img src="img/kite.png">
+					    <div class="data" id="navigation">
+
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Buy Now!</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Gift Ideas</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div><!-- end-.row -->
 		              
