--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     <div class="row">
                          <div class="çol-12">
                             <img src="img/kite.png">
+							 <br class="clear">
 					     </div>
 					</div>	              
 		            
@@ -133,6 +134,7 @@
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
                             <img src="img/paper.png">
+							<br class="clear">
 							<div class="data" id="navigation">
                                 <ul>
                                     <li><a href="#">Home</a></li>
@@ -150,12 +152,11 @@
 							<p id="no-script">
                                 We recommend that you have JavaScript enabled!
                             </p>
-							<p id="intro">
-                                Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-                            </p> 							
+							 							
 		                </div><!-- end col-11 -->
 						<div class="col-3">
                             <img class="circle" src="img/orange-globe.png">
+							<br class="clear">
                        </div> <!-- end col-3 -->
                     </div> <!-- end class row -->            
 
