--- a/index.html
+++ b/index.html
@@ -149,14 +149,20 @@
 					<div class="row" style="background-color: #f6931e;">
                         <div class="col-11">
                             <h2>Get ready for take off.</h2> 
-							<p id="no-script">
-                                We recommend that you have JavaScript enabled!
+							<p id="intro">
+                            <!-- Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. -->
+                            Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
+                            You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
                             </p>
+							
 							 							
 		                </div><!-- end col-11 -->
 						<div class="col-3">
                             <img class="circle" src="img/orange-globe.png">
 							<br class="clear">
+							<p id="no-script">
+                                We recommend that you have JavaScript enabled!
+                            </p>
                        </div> <!-- end col-3 -->
                     </div> <!-- end class row -->            
 
