--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
                             <h2>Get ready for take off.</h2> 
 							<br class="clear">
 							<br class="clear">
+							<br class="clear">
+							<br class="clear">
 							<p id="intro">
                             <!-- Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. -->
                             Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
