--- a/index.html
+++ b/index.html
@@ -167,8 +167,12 @@
                     <div class="row" style="background-color: #1abc9c;">
                         <div class="col-10">
                             <h2>We're flying around the globe</h2>
+							<br class="clear">
+							<br class="clear">
                             <div>
                             <h2 class="heading">Our Celebrities Above the clouds &amp; over the sea.</h2>
+							<br class="clear">
+							<br class="clear">
                             <p class="info">
                                 We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
                                 the little critters to realise they've been tagged - so you have to be fast!
