--- a/index.html
+++ b/index.html
@@ -162,13 +162,14 @@
 		                </div><!-- end col-11 -->
 						<div class="col-3">
                             <img class="circle" src="img/orange-globe.png">
+							<h3 class="heading">Our Celebrities </h3>
                        </div> <!-- end col-3 -->
                     </div> <!-- end class row -->            
                     <br class="clear">
 					
                     <div class="row" style="background-color: #1abc9c;">
                         <div class="col-10">
-                            <h2 class="heading">Our Celebrities We're flying around the globe</h2>
+                            <h2 class="heading">We're flying around the globe</h2>
 							<br class="clear">
 							<br class="clear">
                             
