--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		                </div><!-- end col-11 -->
 						<div class="col-3">
                             <img class="circle" src="img/orange-globe.png">
-							<h2 class="heading">Our Celebrities </h2>
+							<h2 class="dark">Our Celebrities </h2>
                        </div> <!-- end col-3 -->
                     </div> <!-- end class row -->            
                     <br class="clear">
@@ -242,9 +242,9 @@
                 
                 <div class="row" style="background-color: #e5ef3f;">
                     <div class="col-9">
-                       <!-- <h2>Above the clouds &amp; over the sea.</h2> -->
+                       <h2 class="heading">Above the clouds &amp; over the sea.</h2> 
                         <div>
-                            <h2 class="heading">Our Celebrities Above the clouds &amp; over the sea.</h2>
+                            <h2 class="dark">Our Celebrities Above the clouds &amp; over the sea.</h2>
                             <p class="info">
                                 We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
                                 the little critters to realise they've been tagged - so you have to be fast!
@@ -591,7 +591,7 @@
                     </p>
                 </div>
 			
-    <div class="row">
+        <div class="row">
 
         <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
 
@@ -604,11 +604,11 @@
 
         </div>
 
-    </div>
+            </div>
 
             <div class="row">
 
-        <div class=" col-lg-12 col-md-12  col-sm-12">
+            <div class=" col-lg-12 col-md-12  col-sm-12">
 			<p id="disclaimer">
                 Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
                 like people so their privacy should be respected.
@@ -621,8 +621,8 @@
                 <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
                 and to receive newsletters from Practical HTML5 Projects for fun and Profit!
             </div>
-        </div>
-    </div>
+            </div>
+            </div>
 
             <a href="https://orris0.github.io/orris0/index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
             <div id="farewell">Come back and visit us soon!</div>
@@ -657,8 +657,8 @@
                 </div>
             </div> 
 		</div><!-- end-container -->
-    </div><!-- end wrapper -->
-</body><!-- end body  -->   
+        </div><!-- end wrapper -->
+    </body><!-- end body  -->   
 </html>
 
 
