--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                             <h2 class="heading">Get ready for take off.</h2>							
 							<br class="clear">
 							<br class="clear">
+							<br class="clear">
 							
 							<p id="intro">
                             <!-- Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. -->
