--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             </p>   
                         </div>
                         <div class="col-3">
-                            <img id="waves" class="circle" src="images/waves.png">
+                            <img class="circle" src="images/waves.png">
 							<table class="data" id="celebs">
                                 <thead>
                                     <tr>
