--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="col-10">
                             <h2 class="heading">We're flying around the globe</h2>
 							<br class="clear">
-							<p class="info">
+							<p title="Hey look I am a title tooltip!"><p class="info">
                                 We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
                                 the little critters to realise they've been tagged - so you have to be fast!
                             </p>   
