--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Tree Pseudo-class Selectors</title>
-<style type="text/css" media="screen">
-  :root {font-family: Verdana, Geneva, sans-serif;}  /* same as setting 
-HTML element */
-  ul li:nth-child(odd) {color: red;}  /* odd items red */
-  ul li:nth-child(even) {color: blue;} /* even items blue */
-  ul li:nth-child(5)  {font-size: xx-large;}  /* 5th item bigger */
-  ul li:nth-child(3n) {font-style: italic;}   /* every third item italic */
-  ul li:nth-last-child(2) {text-decoration: underline;}  /* second 
-from the last child underlined */
-  ul li:last-child {background-color: black; color: white;} /* same 
-as :nth-last-child(1) */
-  p#test1 span:first-of-type {color: green;}
-  p#test1 span:last-of-type {color: red;}
-  p#test1 span:nth-of-type(3) {font-size: larger;}
-  p#test1 span:nth-last-of-type(2) {text-decoration: underline;}
-  p.test2 span:only-child {color: green;}
-  p.test3 em:only-of-type {background-color: red;}
-  p:empty {border: 2px solid red;}
-</style>
+        <title>Tree Pseudo-class Selectors</title>
+		
+        <style type="text/css" media="screen">
+            :root {font-family: Verdana, Geneva, sans-serif;}  /* same as setting HTML element */
+            ul li:nth-child(odd) {color: red;}  /* odd items red */
+            ul li:nth-child(even) {color: blue;} /* even items blue */
+            ul li:nth-child(5)  {font-size: xx-large;}  /* 5th item bigger */
+            ul li:nth-child(3n) {font-style: italic;}   /* every third item italic */
+            ul li:nth-last-child(2) {text-decoration: underline;}  /* second from the last child underlined */
+            ul li:last-child {background-color: black; color: white;} /* same as :nth-last-child(1) */
+            p#test1 span:first-of-type {color: green;}
+            p#test1 span:last-of-type {color: red;}
+            p#test1 span:nth-of-type(3) {font-size: larger;}
+            p#test1 span:nth-last-of-type(2) {text-decoration: underline;}
+            p.test2 span:only-child {color: green;}
+            p.test3 em:only-of-type {background-color: red;}
+            p:empty {border: 2px solid red;}
+        </style>
+		
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
