--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             p.test2 span:only-child {color: green;}
             p.test3 em:only-of-type {background-color: red;}
             p:empty {border: 2px solid red;}
+
+			.heading {font-family: Impact, Sans-Serif;}
+            .veryimportant {background-color: yellow;}
+            .stuff {color: red;}
+            .veryimportant.stuff {font-style: italic;}
+            .veryimportant.example.stuff {text-decoration: underline;}
         </style>
 		
         <!-- Viewport for responsive web design -->
@@ -107,7 +113,7 @@
 			
 			    <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
                     <div class="col-12">
-				        <h1 id="html5-ch1-7h1">StarTrackr!</h1>
+				        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
                     </div><!-- end-col-12 -->	
                 </header>
 			
