--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <div class="col-10">
                             <h2 class="heading">We're flying around the globe</h2>
 							<br class="clear">
-							<p id="test1" class="info">
+							<p class="veryimportant" id="test1" class="info">
                                 We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
                                 the little critters to realise they've been tagged - so you have to be fast!
                             </p>   
