--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             p:empty {border: 2px solid red;}
 
 			.heading {font-family: Impact, Sans-Serif;}
-            .veryimportant {background-color: yellow;}
+            .veryimportant {background-color: rgba(225,0,0,0.4;}
             .stuff {color: red;}
             .veryimportant.stuff {font-style: italic;}
             .veryimportant.example.stuff {text-decoration: underline;}
