--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                 </div>
                             </div>
                         </div>
-					</div><!-- end content -->
+					<!-- </div><!-- end content -->
                     <div class="row" style="background-color: #00AFE1;">
                         <div class="col-12">
                             <img id="plane-background" src="./img/plane-background.png" width="935px">
@@ -607,15 +607,15 @@
                 <!-- Template Main JS File -->
             <script src="../orris0/main.js"></script>
 			<a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-            <div class="col-12">
-				<p id="disclaimer">
-                    Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
-                </p>
-                <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-                    <p>&copy; Kite-It.</p>
-                </div>
+                <div class="col-12">
+				    <p id="disclaimer">
+                        Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
+                    </p>
+                    <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                        <p>&copy; Kite-It.</p>
+                    </div>
                 </div> 
-			</div><!-- end-container -->
+			</div><!-- end-container -->    
 		</div><!-- end wrapper -->
     </body><!-- end body  -->   
 </html>
