--- a/index.html
+++ b/index.html
@@ -159,16 +159,9 @@
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
                             <img src="img/paper.png">
-							<div class="data" id="navigation">
-                                <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Buy Now!</a></li>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Gift Ideas</a></li>
-                                </ul>
-                            </div>
-							 
-							<br class="clear">
+						    <p id="no-script">
+                                We recommend that you have JavaScript enabled!
+                            </p>
                         </div><!-- end-col-12 -->
                     </div> <!-- end class row -->
 
