--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
     <meta property="og:image" content="https://example.com/rock3.jpg">
     <meta property="og:image:height" content="1000">
     <!-- Favicon-->
-    <!--<link rel="icon" href="images/favicon.ico">-->
+    <!--<link rel="icon" href="images/favicon.ico">--
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-    <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
+    <!--<link rel="stylesheet" href="css/styles.css?v=1.0">--
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:internetearnings@live.com">
     <link rel="author" type="text/html" href="https://orrisb.github.io">
-    <!-- Bootstrap Icons-->
+    <!-- Bootstrap Icons--
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- Core theme CSS (includes Bootstrap)--
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <style>
         p {
@@ -127,6 +127,7 @@
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+		-->
         <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
         <meta property="og:description" content="A simple HTML5 Template for new projects.">
