--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <meta property="og:image" content="https://example.com/rock3.jpg">
     <meta property="og:image:height" content="1000">
     <!-- Favicon-->
-    <!--<link rel="icon" href="images/favicon.ico">--
+    <!--<link rel="icon" href="images/favicon.ico">-->
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <!--<link rel="stylesheet" href="css/styles.css?v=1.0">--
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:internetearnings@live.com">
-    <link rel="author" type="text/html" href="https://orrisb.github.io">
-    <!-- Bootstrap Icons--
+    
+    <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
@@ -122,7 +122,7 @@
         }
     </style>     
     
-        <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
+        <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico"> -->
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
