--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <!-- Tree Pseudo-class Selectors --
+        <!-- Tree Pseudo-class Selectors -->
 		
         <style type="text/css" media="screen">
             :root {font-family: Verdana, Geneva, sans-serif;}  /* same as setting HTML element */
