--- a/news.html
+++ b/news.html
@@ -4,6 +4,10 @@
 	<!-- Required meta tags -->
 	<meta charset="UTF-8">
 	<title>Integrating Innovation-News</title>
+	<link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./js/scripts.js"></script>
+		
 	<!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
