--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script> 
+        <script type="text/javascript" src="./js/scripts.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 		<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8">
