--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="script.js"></script>
+		<link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./js/scripts.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Tree Pseudo-class Selectors -->
 		
@@ -683,7 +683,9 @@
             <script src="../orris0/swiper-bundle.min.js"></script>
             <script src="../orris0/validate.js"></script>
                 <!--jQuery JS-->
-            <script src="../orris0/js/"></script>
+            <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+            <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+            <script type="text/javascript" src="./js/scripts.js"></script>
                 <!-- Template Main JS File -->
             <script src="../orris0/main.js"></script>
 			<a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
