--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Gallery-page-Templates</title>
 		<link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./js/scripts.js"></script>
+        <script type="text/javascript" src="scripts.js"></script>
 		<script type="text/javascript" src="/js/scripts.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
