--- a/simplistic-html5.html
+++ b/simplistic-html5.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--Everything you write should be using markups -->
 <!-- head section is communicating about the page to the browser -->
 <!-- Anything you write under head is not displayed on the browser content page. -->
@@ -7,29 +7,33 @@
 <!-- Describing about the page -->
 
 <head>
-    
-    <!-- Required meta tags -->
-    <!-- Describing about the page -->
-    <!-- head section is communicating about the page to the browser -->
-    <!-- Anything you write under head is not displayed on the browser content page. -->
     <title>Simplistic HTML5</title>
-<meta charset=utf-8>
-<style>
-body { width:500px; margin:auto;
-}
-header, nav, article, footer { display:block;
-}
-header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
-}
-nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
-}
-article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
-}
-footer { clear:both; background-color:#FF9966; text-align:center;
-}
-h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
-}
-</style>
+    <meta charset=utf-8>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+	<meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:image" content="image.png">
+    <meta name="keywords" content="HTML5, Node.js, Jquery">
+    <meta name="author" content="Orris Baker">
+    
+	<style>
+        body { width:500px; margin:auto;
+        }
+        header, nav, article, footer { display:block;
+        }
+        header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
+        }
+        nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+        }
+        article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
+       }
+       footer { clear:both; background-color:#FF9966; text-align:center;
+        }
+        h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
+        }
+    </style>
 </head>
 <body>
 	<header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
@@ -39,40 +43,40 @@ h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
             </div><!-- end-col-12 -->
     </header>
 	<!--
-<header>
-<h1>header goes here</h1>
-</header>
+    <header>
+        <h1>header goes here</h1>
+    </header>
 	-->
-<nav>
-<ul>
-<li><a href="page-one.html" >Page One</a></li>
-<li><a href="page-two.html" >Page Two</a></li>
-<li><a href="index.html" >Home page</a></li>
-</ul>
-</nav>
-<article>
-<h2>Article</h2>
-Are you illiterate? Write today for free course.
-</article>
-<article>
-<h2>Another Article</h2>
-Stock up for Christmas. Limited to one per family.
-</article>
-<footer>
-Footer. Perhaps for a copyright statement
-</footer>
+    <nav>
+        <ul>
+            <li><a href="page-one.html" >Page One</a></li>
+            <li><a href="page-two.html" >Page Two</a></li>
+            <li><a href="index.html" >Home page</a></li>
+        </ul>
+    </nav>
+    <article>
+        <h2>Article</h2>
+        Are you illiterate? Write today for free course.
+    </article>
+    <article>
+        <h2>Another Article</h2>
+        Stock up for Christmas. Limited to one per family.
+    </article>
+    <footer>
+        Footer. Perhaps for a copyright statement
+    </footer>
 </body>
 </html>
-	<!-- Viewport for responsive web design -->
+	<!-- Viewport for responsive web design 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+        <meta name="google-adsense-account" content="ca-pub-9639638377144073"> 
         <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
         <meta property="og:description" content="A simple HTML5 Template for new projects.">
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-		
+		-->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -91,10 +95,10 @@ Footer. Perhaps for a copyright statement
 		<link rel="icon" type="image/png" href="./flexy-logo.png">
 
 	
-    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="script.js"></script>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./script.js"></script>
+    <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="REFRESH" content="2400">
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
