--- a/simplistic-html5.html
+++ b/simplistic-html5.html
@@ -34,6 +34,11 @@
         h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
         }
     </style>
+	<!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
+            <script src="./js/html5.js" type="text/javascript"></script>
+        <![endif]-->
+        </head>
 </head>
 <body>
 	<header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
