--- a/simplistic-html5.html
+++ b/simplistic-html5.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
 <html ng-app lang="en">
-<!-- All the Tags should be under <html> -->
-<!-- Describing about the page -->
-
-<head>
-    <title>Simplistic HTML5</title>
+    <head>
+        <title>Simplistic HTML5</title>
+        <meta charset=utf-8>
+        <style>
+            body { width:500px; margin:auto;
+            }
+            header, nav, article, footer { display:block;
+            }
+            header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
+            }
+            nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+            }
+            article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
+            }
+            footer { clear:both; background-color:#FF9966; text-align:center;
+            }
+            h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
+            }
+        </style>
+    
     <meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
